--- a/fragmentos-do-eter/fragmentos-do-eter/export_presets.cfg
+++ b/fragmentos-do-eter/fragmentos-do-eter/export_presets.cfg
@@ -42,7 +42,7 @@ progressive_web_app/background_color=Color(0, 0, 0, 1)
 
 [preset.1]
 
-name="FragmentsOfEter"
+name="Fragmentos do Eter"
 platform="Windows Desktop"
 runnable=true
 advanced_options=true
@@ -51,7 +51,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="GAME/DESKTOP/fragmentsofeter.exe"
+export_path="GAME/DESKTOP/Fragmentos do Eter.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -80,7 +80,7 @@ application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
 application/company_name=""
-application/product_name=""
+application/product_name="Fragmentos do Eter"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
